--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loading": "^2.0.3"
+    "react-loading": "^2.0.3",
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
